--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "cmdk": "^1.1.1",
         "embla-carousel-react": "^8.6.0",
         "lucide-react": "^0.488.0",
+        "motion": "^12.10.1",
         "next": "15.3.0",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
